[package]
name = "rpclip"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.0"
clap = { version = "4.5.9", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.38.1", features = ["full"] }

[[bin]]
name = "rpclip-server"
path = "src/server.rs"

[[bin]]
name = "rpclip-client"
path = "src/client.rs"
